--- a/myapp/views/main/header.ejs
+++ b/myapp/views/main/header.ejs
@@ -29,6 +29,7 @@
 							<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="/trams/predict">Travelling Time Prediction</a></li>
+								<li><a href="/trams/predict_eta">ETA with Predictions</a></li>
 								<li><a href="/trams/predict_sect">Travelling Time Prediction of a Section</a></li>
 								<li><a href="/trams/predict_exist">Travelling Time Prediction with Existing Data</a></li>
 								<li><a href="/trams/predict_week">Travelling Time Prediction Error Summary with Weekly Data</a></li>
