--- a/myapp/views/main/header.ejs
+++ b/myapp/views/main/header.ejs
@@ -34,6 +34,7 @@
 								<li><a href="/trams/predict_exist">Travelling Time Prediction with Existing Data</a></li>
 								<li><a href="/trams/predict_week">Travelling Time Prediction Error Summary with Weekly Data</a></li>
 								<li><a href="/trams/view_data">View Raw Data</a></li>
+								<li><a href="/trams/predictor_detail">Prediction Model Details</a></li>
 							</ul>
 						</li>
 						<%# Menu End -------------------------------------------------------- %>
