--- a/myapp/views/main/tram_predict_week.ejs
+++ b/myapp/views/main/tram_predict_week.ejs
@@ -143,6 +143,8 @@
 							</li>
 							<% } %>
 						</ol>
+						<h4>Further Details:</h4>
+						<p><a href = "/trams/predictor_detail/<%= params.stopA %>/<%= params.stopB %>/<%= params.model %>">Details of <%= searchbox.myModel.name %> in this section</a><br/></p>
 				</div>
 				<%# Numerals ------------------------------------------------------------------------ %>
 				<div id="num" class="tab-pane fade in active">
