--- a/myapp/views/main/index.ejs
+++ b/myapp/views/main/index.ejs
@@ -1,3 +1,7 @@
 <%- include('header'); %>
+
+<%- include('tram_predict_eta_searchbox'); %>
+
+<%- include('tram_predict_searchbox'); %>
 	
 <%- include('footer'); %>
