--- a/myapp/views/main/predictor_detail_historical_inv.ejs
+++ b/myapp/views/main/predictor_detail_historical_inv.ejs
@@ -1,6 +1,6 @@
 <div class="alert alert-info">
 	<strong>How to do Prediction?</strong>
-	<p>Simply obtain the "historical mean" travelling time data with respect to the class of the day, regardless of time of day.</p>
+	<p>Obtain the "historical mean" travelling speed (i.e. inverse of travelling time) data with respect to the class of the day, regardless of time of day.</p>
 </div>
 	  
 
