--- a/myapp/views/main/tram_predict_eta.ejs
+++ b/myapp/views/main/tram_predict_eta.ejs
@@ -2,52 +2,7 @@
 
 	<%# Search Box --------------------------------------------------------------------- %>
 
-	<%
-	function stops(compare){
-		if (typeof params === "undefined"){
-			return "";
-		}else{
-			return (params.stop_name + "" == compare + "") ? " selected" : "";
-		}
-	}
-	%>
-	<div class="panel panel-default">
-		<div class="panel-heading"><b><%= title %></b></div>
-		<div class="panel-body">
-			<form>
-				<div class="form-group">
-					<div class="row">
-						<%# Section %>
-						<label class="control-label col-sm-3 col-lg-3" for="stop">Stop:</label>
-						<div class="col-sm-9 col-lg-9">
-							<select class="form-control" id="stop">
-								<option value="">-- Please select --</option>
-								<% for (var stop in searchbox.stops){ %>
-								<option value = "<%= stop %>"<%= stops(stop) %>><%= stop %></option>
-								<% } %>
-							</select>
-						</div>
-						<div class="col-sm-12 col-lg-12">
-							<br/>
-							<button type="button" class="btn-block btn-default" onclick="searchbox_submit();">View ETA and Predictions</button>
-						</div>
-					</div>
-				</div>
-			</form>
-		</div>
-	</div>
-
-	<script language = "javascript">
-		//Submit
-		function searchbox_submit(){
-			if ($("#stop").val() != ""){
-				//Valid
-				var URL = "/trams/predict_eta/" + encodeURIComponent($("#stop").val());
-				//Go to new URL
-				window.location.href = URL;
-			}
-		}
-	</script>
+	<%- include('tram_predict_eta_searchbox'); %>
 	
 	<%# Search Box Ends --------------------------------------------------------------------- %>
 
